# doug_geometry

./: Cargo.toml  LICENSE
liquid/: Cargo.toml
liquid/src/: lib.rs  poly_index.rs
src/: bbox.rs  lib.rs  main.rs
src/decomp/: mod.rs  rect_corner.rs  wall.rs  wall_model.rs
src/shape/: mod.rs  path.rs  point.rs  poly.rs  rect.rs
src/shapes/: extrema.rs  mod.rs  path.rs  point.rs  poly.rs  polygon.rs  rect.rs  sanitization.rs
