[package]
name = "doug_geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
rkyv = "0.7.39"
serde = { version = "1.0.147", features = ["derive"] }
vlsir = "2"
bevy = "0.9"
bevy_prototype_lyon = "0.7"
bevy_pancam = "0.7"
